//! gRPC Service Unit Tests
//!
//! Tests for correlation ID generation and response building.

use std::collections::HashMap;
use uuid::Uuid;

fn generate_correlation_id() -> Uuid {
    Uuid::new_v4()
}

// ============================================================================
// Response Types
// ============================================================================

struct ValidateTokenResponse {
    valid: bool,
    subject: String,
    claims: HashMap<String, String>,
    error_code: String,
    error_message: String,
}

struct IntrospectResponse {
    active: bool,
    subject: String,
    token_type: String,
}

// ============================================================================
// Correlation ID Tests
// ============================================================================

#[test]
fn test_correlation_id_generation() {
    let id1 = generate_correlation_id();
    let id2 = generate_correlation_id();

    assert_ne!(id1, id2);
    assert!(!id1.is_nil());
    assert!(!id2.is_nil());
}

#[test]
fn test_correlation_id_string_format() {
    let id = generate_correlation_id();
    let str_id = id.to_string();

    assert_eq!(str_id.len(), 36);
    assert_eq!(str_id.chars().filter(|c| *c == '-').count(), 4);
}

// ============================================================================
// Token Detection Tests
// ============================================================================

#[test]
fn test_empty_token_detection() {
    let token = "";
    assert!(token.is_empty());
}

#[test]
fn test_non_empty_token_detection() {
    let token = "eyJhbGciOiJSUzI1NiJ9.payload.signature";
    assert!(!token.is_empty());
}

// ============================================================================
// Response Building Tests
// ============================================================================

#[test]
fn test_success_response() {
    let response = ValidateTokenResponse {
        valid: true,
        subject: "user-123".to_string(),
        claims: HashMap::new(),
        error_code: String::new(),
        error_message: String::new(),
    };

    assert!(response.valid);
    assert_eq!(response.subject, "user-123");
    assert!(response.error_code.is_empty());
}

#[test]
fn test_error_response() {
    let correlation_id = generate_correlation_id();
    let response = ValidateTokenResponse {
        valid: false,
        subject: String::new(),
        claims: HashMap::new(),
        error_code: "AUTH_TOKEN_MISSING".to_string(),
        error_message: format!("Token is required [correlation_id: {}]", correlation_id),
    };

    assert!(!response.valid);
    assert!(response.subject.is_empty());
    assert!(!response.error_code.is_empty());
    assert!(response.error_message.contains("correlation_id"));
}

#[test]
fn test_introspect_inactive_response() {
    let response = IntrospectResponse {
        active: false,
        subject: String::new(),
        token_type: String::new(),
    };

    assert!(!response.active);
    assert!(response.subject.is_empty());
}
